[gd_scene load_steps=3 format=2]

[ext_resource path="res://smp.png" type="Texture" id=1]
[ext_resource path="res://Main.gd" type="Script" id=3]

[node name="Launcher" type="Node2D"]
script = ExtResource( 3 )

[node name="Logo" type="Sprite" parent="."]
position = Vector2( 240, -113 )
texture = ExtResource( 1 )

[node name="Network" type="HTTPRequest" parent="."]

[node name="Discord" type="HTTPRequest" parent="."]

[node name="Middle" type="Button" parent="."]
visible = false
margin_left = 131.0
margin_top = 236.0
margin_right = 353.0
margin_bottom = 269.0

[node name="Text" type="Label" parent="."]
margin_left = 1.0
margin_top = 176.0
margin_right = 482.0
margin_bottom = 219.0
text = "hiihihihihihihiihhii"
align = 1
valign = 1

[node name="Left" type="Button" parent="."]
margin_left = 87.0
margin_top = 234.0
margin_right = 202.0
margin_bottom = 270.0
text = "NGROK"

[node name="Right" type="Button" parent="."]
margin_left = 292.0
margin_top = 234.0
margin_right = 407.0
margin_bottom = 270.0
text = "Playit.gg"

[node name="Close" type="Button" parent="."]
margin_left = 141.0
margin_top = 296.0
margin_right = 362.0
margin_bottom = 316.0
text = "Szerver Bezárása"

[connection signal="request_completed" from="Network" to="." method="_on_Network_request_completed"]
[connection signal="pressed" from="Middle" to="." method="_on_Middle_pressed"]
[connection signal="pressed" from="Left" to="." method="_on_Left_pressed"]
[connection signal="pressed" from="Right" to="." method="_on_Right_pressed"]
[connection signal="pressed" from="Close" to="." method="_on_Close_pressed"]
